===== 1.8.2 (May ??, 2013) =====
* Updated Czech localization (by Marek Pavelka)
* Bitknights dictionaries support (by Norbert Kenderesi)

===== 1.8.1 (May 06, 2013) =====
* Fixed ConcurrentModificationException in ZLTextView

===== 1.8 (May 06, 2013) =====

* 2 column text view (in horizontal mode, optional, enabled by default on devices with diagonal > 7")
* text highlighting (show bookmarks in color)
* Fixed ePub books scanning
* Fixed series index representation: 10 instead 1E+1

===== 1.7.9 (Apr 23, 2013) =====
* Fixed Ukrainian hyphenations
* Fixed missing paragraph before new section issue (in some book formats)
* Fixed library/bookmarks start
* Georgian in language list in book info dialog
* Fixed interface language swithcing (change language immediately in menu, library, etc.)
* Added "add/remove book to/from favorites" items in BookInfoActivity menu
* Smaller font size in list activities
* Read/unread book marks

===== 1.7.8 (Mar 24, 2013) =====
* Fixed library scanning: all books are visible in the library
* Updated Czech & Norwegian translations
* Library saves book uids
* Calls for (possible) external library & bookmarks activities

===== 1.7.7 (Mar 14, 2013) =====
* Fixed XML parsing
* Fixed series order in library

===== 1.7.6 (Mar 13, 2013) =====
* Fixed several possible NPEs

===== 1.7.4/5 (Mar 11, 2013) =====
* Book/bookmark deserializer: SAX instead of our own XML parser
* Georgian localization (by Bookland.ge)
* Interface language option
* Book sort order in Library omits leading articles
* Fixed "screen stays switched on while locked" issue

===== 1.7.3 (Mar 04, 2013) =====
* Library service does not work in background after program closing
* We do not obfuscate code
* Fixed issue in 'Books sorted by title' library catalog: viewing book info does not remove book from the list
* Fixed issue with large (1000+) bookmarks collection opening

===== 1.7.2 (Feb 22, 2013) =====
* Restored android:changes attribute for all activities