@@ -53,7 +53,7 @@ class BookTitlePreference extends ZLStringPreference {
 	protected void setValue(String value) {
 		super.setValue(value);
 		myBook.setTitle(value);
-		((EditBookInfoActivity)getContext()).updateResult();
+		((EditBookInfoActivity)getContext()).saveBook();
 	}
 }
 
@@ -85,7 +85,7 @@ class BookLanguagePreference extends LanguagePreference {
 	@Override
 	protected void setLanguage(String code) {
 		myBook.setLanguage(code.length() > 0 ? code : null);
-		((EditBookInfoActivity)getContext()).updateResult();
+		((EditBookInfoActivity)getContext()).saveBook();
 	}
 }
 
@@ -138,7 +138,7 @@ class EncodingPreference extends ZLStringListPreference {
 			final String value = getValue();
 			if (!value.equalsIgnoreCase(myBook.getEncoding())) {
 				myBook.setEncoding(value);
-				((EditBookInfoActivity)getContext()).updateResult();
+				((EditBookInfoActivity)getContext()).saveBook();
 			}
 		}
 	}
@@ -154,8 +154,12 @@ public class EditBookInfoActivity extends ZLPreferenceActivity {
 		super("BookInfo");
 	}
 
-	void updateResult() {
-		setResult(FBReader.RESULT_REPAINT, BookInfoActivity.intentByBook(myBook));
+	void saveBook() {
+		myCollection.bindToService(this, new Runnable() {
+			public void run() {
+				myCollection.saveBook(myBook, false);
+			}
+		});
 	}
 
 	@Override
